--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ pinterest-share: True
 pocket-share: True
 vkontakte-share: True
 
-disqus-shortname: "panossakkos"
+disqus-shortname: "elie"
 
 syntax-highlight: True
 
@@ -109,12 +109,21 @@ syntax-highlight: True
 ############
 
 events:
-  - image: "/img/timeline/spidertocat.png"
-    date: "September 2013 - Today"
-    description: "Saving the neighborhood!"
   - image: "/img/timeline/baracktocat.jpg"
-    date: "September 2007 - August 2013"
+    date: "August 15 - 23, 2016"
+    description: "Final evaluations"  
+  - image: "/img/timeline/spidertocat.png"
+    date: "June 27, 2016 - August 15, 2016"
+    description: "Keep coding"
+  - image: "/img/timeline/baracktocat.jpg"
+    date: "June 20 - 27, 2016"
+    description: "Midterm evaluations"
+  - image: "/img/timeline/spidertocat.png"
+    date: "May 23, 2016 - June 27, 2016"
     description: "Started coding"
+  - image: "/img/timeline/baracktocat.jpg"
+    date: "April 22, 2016 - May 22, 2016"
+    description: "Community Bonding"
 
 # First image of the Timeline
 
