--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ lines: # You can add HTML Tags in the Text
   - text: "The lower you fall, the higher you'll fly."
   - text: "Where’s your will to be weird?"
 
-me-img: "/img/jetpacktocat.png"
+me-img: "/img/GitHub_picture.JPG"
 
 ##############################
 # Color the browser elements #
