Change home sentences

--- a/_config.yml
+++ b/_config.yml
@@ -39,8 +39,8 @@ type-speed: 10
 start-delay: 200
 delete-delay: 5000
 lines: # You can add HTML Tags in the Text
-  - text: "The lower you fall, the higher you'll fly."
-  - text: "Where’s your will to be weird?"
+  - text: "Junior Software and Image Processing Engineer"
+  - text: "Open source contributor"
 
 me-img: "/img/GitHub_picture.JPG"
 
