--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ force-https: True
 
 lang: "en"
 author: "Elie Tournier"
-title: "{ Elie Tournier }"
+title: "Elie 'hopetech' Tournier"
 description: "Blog and website of Elie Tournier, blogging mainly for tech. Opinions expressed are mine."
 keywords: "elie, tournier, personal, Mesa, XOrg"
 favicon: "/img/favicon.ico"
@@ -25,7 +25,7 @@ favicon: "/img/favicon.ico"
 
 black-favicon: "/img/black-lab-glass.ico"
 
-background-img: "../img/intro-bg.jpg"
+background-img: "../img/bg-free.jpg"
 
 ##############################
 # Dynamic Text on the Header #
@@ -39,15 +39,15 @@ type-speed: 10
 start-delay: 200
 delete-delay: 5000
 lines: # You can add HTML Tags in the Text
-  - text: "Junior Software and Image Processing Engineer"
-  - text: "Open source contributor"
+  - text: "<font color=0x101010><b>Software and Image Processing Engineer</font>"
+  - text: "<font color=0x101010>Open source contributor</font>"
 
 me-img: "/img/GitHub_picture.JPG"
 
 ##############################
 # Color the browser elements #
 ##############################
-color-browser: "#000000"
+color-browser: "#202020"
 apple-status-bar-style: "black"
 
 ################
@@ -74,39 +74,10 @@ post-preview-words: 96
 paginate: 5
 
 email-share: True
-fb-share: True
 twitter-share: True
-linkedin-share: True
 reddit-share: True
-google-plus-share: True
-pocket-share: True
 
 syntax-highlight: True
-
-############
-# Timeline #
-############
-
-events:
-  - image: "/img/timeline/spidertocat.png"
-    date: "August 15 - 23, 2016"
-    description: "Final evaluations"  
-  - image: "/img/timeline/baracktocat.jpg"
-    date: "June 27, 2016 - August 15, 2016"
-    description: "Keep coding"
-  - image: "/img/timeline/spidertocat.png"
-    date: "June 20 - 27, 2016"
-    description: "Midterm evaluations"
-  - image: "/img/timeline/baracktocat.jpg"
-    date: "May 23, 2016 - June 27, 2016"
-    description: "Started coding"
-  - image: "/img/timeline/xorg.jpg"
-    date: "April 22, 2016 - May 22, 2016"
-    description: "Community Bonding"
-
-# First image of the Timeline
-
-timeline-img: "/img/timeline/default.png"
 
 ###########
 # Contact #
@@ -119,11 +90,8 @@ email: "tournier.elie@gmail.com"
 ################
 
 # The author blurb goes underneath blog posts.
-# This works best when your author blurb image has a transparent background, or matches your site background color.
 
-# if the author_blurb is not set, then this feature is skipped
-author_blurb: "My name is Elie Tournier. I'm a medical ICT student at Telecom Physique Strasbourg, France. Open-source entousiast, I contribute to Mesa by implementing a double precision floating point library."
-author_blurb_image: "/img/author.png"
+author_blurb: "My name is Elie Tournier, I'm a French software engineer. Open-source entousiast, I contribute to Mesa, an open-source implementation of the OpenGL specification - a system for rendering interactive 3D graphics."
 
 ##################
 # Social Buttons #
@@ -134,8 +102,6 @@ social:
     url: "https://www.linkedin.com/in/elietournier"
   - title: "github"
     url: "https://github.com/hopetech"
-  - title: "rss"
-    url: "/feed.xml"
 
 ############
 # 404 page #
@@ -152,7 +118,6 @@ social:
 pages_list:
   About: 'about'
   Blog: 'latest-post'
-  Timeline: 'timeline'
   Contact: 'contact'
 
 # Exclusion list from the generated _site
